--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "$(yarn bin prettier) --write ."
   },
   "dependencies": {
+    "@ledgerhq/react-ui": "^0.14.9",
+    "@ledgerhq/wallet-api-client": "^1.0.3",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
